--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "react-rating": "^2.0.5",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-safe": "^1.3.0",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
+    "redux": "^4.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
