--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.5.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
+    "react-chartjs-2": "^3.0.5",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
